feat: resolve linting warnings and update codebase - Fix Tailwind shorthand violations, replace w-full h-full with size-full, w-5 h-5 with size-5, flex-shrink-0 with shrink-0 - All tests passing (unit 7/7, integration 6/6, E2E 11/11) - Build successful with zero errors/warnings - Ready for production deployment

--- a/docs/onboarding/1. master-client-onboarding.md
+++ b/docs/onboarding/1. master-client-onboarding.md
@@ -9,7 +9,7 @@
 This onboarding system is split into two comprehensive documents:
 
 ### **1. AI Agent Workflow & Role Briefing** 📖
-**File:** `docs/onboarding/ai-agent-workflow-briefing.md`
+**File:** `docs/onboarding/2. ai-agent-workflow-briefing.md`
 
 **👥 FOR:** AI agents who need to understand their role, capabilities, and complete autonomous workflow
 **📋 CONTAINS:**
@@ -21,7 +21,7 @@ This onboarding system is split into two comprehensive documents:
 - Advanced autonomous features and reporting
 
 ### **2. Codebase Technical Guide** 🔧
-**File:** `docs/onboarding/codebase-technical-guide.md`
+**File:** `docs/onboarding/3. codebase-technical-guide.md`
 
 **👥 FOR:** Developers and AI agents who need detailed technical implementation guidance
 **📋 CONTAINS:**
@@ -38,8 +38,8 @@ This onboarding system is split into two comprehensive documents:
 
 **🔄 Essential Reading Order:**
 1. **Read this overview** (current document) ← YOU ARE HERE
-2. **Read the AI Agent Workflow & Role Briefing** (`ai-agent-workflow-briefing.md`)
-3. **Read the Codebase Technical Guide** (`codebase-technical-guide.md`)
+2. **Read the AI Agent Workflow & Role Briefing** (`2. ai-agent-workflow-briefing.md`)
+3. **Read the Codebase Technical Guide** (`3. codebase-technical-guide.md`)
 4. **Study core configuration files:** `lib/site.config.local.ts`, `lib/theme.variants.ts`, `lib/data/staticContent.ts`
 5. **Validate system integrity:** `npm run verify:local`
 
@@ -135,8 +135,8 @@ npm run verify:local
 - **Visual references:** `docs/onboarding/example-screenshots-preview/`
 
 ### **Key Working Documents**
-- **Client blueprint:** `docs/onboarding/blueprint-plan-client-codebase-profile.md`
-- **Agent handover:** `docs/onboarding/agent-work-handover-notes.md`
+- **Client blueprint:** `docs/onboarding/4. blueprint-plan-client-codebase-profile.md`
+- **Agent handover:** `docs/onboarding/5. agent-work-handover-notes.md`
 
 ---
 
@@ -187,12 +187,12 @@ Every customized website must achieve:
 ## 🔗 **NEXT STEPS**
 
 **For AI Agents:**
-1. Read `docs/onboarding/ai-agent-workflow-briefing.md` to understand your complete role
-2. Read `docs/onboarding/codebase-technical-guide.md` for technical implementation details
+1. Read `docs/onboarding/2. ai-agent-workflow-briefing.md` to understand your complete role
+2. Read `docs/onboarding/3. codebase-technical-guide.md` for technical implementation details
 3. Study the 3-step workflow and execute systematic client onboarding
 
 **For Developers:**
-1. Start with `docs/onboarding/codebase-technical-guide.md` for technical deep-dive
+1. Start with `docs/onboarding/3. codebase-technical-guide.md` for technical deep-dive
 2. Review `lib/site.config.local.ts` and `lib/theme.variants.ts` for configuration patterns
 3. Run `npm run verify:local` to validate your development environment
 
@@ -464,7 +464,7 @@ Every customized website must achieve:
    - **Client images will be added to `docs/onboarding/client-input-files/images/` when ready**
    - **Only replace placeholders when real client images are provided**
 
-3. **Create comprehensive client blueprint in `docs/onboarding/blueprint-plan-client-codebase-profile.md`:**
+3. **Create comprehensive client blueprint in `docs/onboarding/4. blueprint-plan-client-codebase-profile.md`:**
 
    **Required blueprint sections:**
    ```markdown
@@ -525,7 +525,7 @@ Every customized website must achieve:
    - Legal/compliance considerations
    - Any custom development patterns
 
-2. **Read current agent handover notes in `docs/onboarding/agent-work-handover-notes.md`:**
+2. **Read current agent handover notes in `docs/onboarding/5. agent-work-handover-notes.md`:**
    - Understand current project status and any ongoing work
    - Check for known issues or technical debt
    - Review any patterns or lessons learned from previous agents
@@ -603,7 +603,7 @@ After completing the 3-step workflow, proceed with systematic implementation:
    - Provide training materials if needed
    - **📝 Document image requirements:** Note in handover that client images should be placed in `docs/onboarding/client-input-files/images/` for future optimization
 
-4. **🔄 MANDATORY: Update agent handover notes (`docs/onboarding/agent-work-handover-notes.md`):**
+4. **🔄 MANDATORY: Update agent handover notes (`docs/onboarding/5. agent-work-handover-notes.md`):**
    - Document all work completed in this session
    - Update project status and technical state
    - Note any issues discovered or lessons learned
