--- a/docs/onboarding/2. ai-agent-workflow-briefing.md
+++ b/docs/onboarding/2. ai-agent-workflow-briefing.md
@@ -194,7 +194,7 @@
 **Objective:** Achieve deep, comprehensive understanding of the entire template system before making any changes.
 
 **Actions Required:**
-1. **Read the complete codebase technical guide (`docs/onboarding/codebase-technical-guide.md`)**
+1. **Read the complete codebase technical guide (`docs/onboarding/3. codebase-technical-guide.md`)**
 2. **Study the core configuration files:**
    - `lib/site.config.local.ts` - Master configuration and theme system
    - `lib/theme.variants.ts` - Theme variant definitions
@@ -441,7 +441,7 @@ After successful completion, provide a comprehensive report including:
 
 **🎯 REMEMBER:** You're not just implementing a template—you're crafting a complete digital experience that represents the client's brand, serves their business goals, and delights their users. Every color choice, every word, every interaction should be intentional and strategic.
 
-**📋 TECHNICAL DETAILS:** For detailed technical implementation guidance, configuration options, and troubleshooting, refer to the `docs/onboarding/codebase-technical-guide.md`.
+**📋 TECHNICAL DETAILS:** For detailed technical implementation guidance, configuration options, and troubleshooting, refer to the `docs/onboarding/3. codebase-technical-guide.md`.
 
 ---
 
