--- a/docs/onboarding/3. codebase-technical-guide.md
+++ b/docs/onboarding/3. codebase-technical-guide.md
@@ -664,7 +664,7 @@ grep -r "text-section-lead.*text-" components/
 
 ---
 
-**📋 WORKFLOW INTEGRATION:** This technical guide works in conjunction with the `docs/onboarding/ai-agent-workflow-briefing.md` for complete AI agent onboarding. Refer to that document for role definition, quality standards, and the complete workflow process.
+**📋 WORKFLOW INTEGRATION:** This technical guide works in conjunction with the `docs/onboarding/2. ai-agent-workflow-briefing.md` for complete AI agent onboarding. Refer to that document for role definition, quality standards, and the complete workflow process.
 
 ---
 
