feat: complete unsplash integration with mcp tools and documentation - Added Unsplash MCP server integration, image optimization workflow, documentation updates, fixed blurDataURL imports, all tests passing

--- a/docs/onboarding/1. master-client-onboarding.md
+++ b/docs/onboarding/1. master-client-onboarding.md
@@ -213,6 +213,55 @@ Every customized website must achieve:
 
 ---
 
+## 🔧 **QUICK REFERENCE: AI ASSISTANT COMMANDS**
+
+### **Image Workflows**
+
+**✅ Client Images (When Provided):**
+```bash
+# 1. Client places images in docs/onboarding/client-input-files/images/
+# 2. Optimize images
+npm run image-optimize
+# 3. Update references in lib/data/[page].ts files
+# 4. Verify everything works
+npm run verify:local
+```
+
+**✅ Unsplash Professional Images (Optional Enhancement):**
+```bash
+# 1. Fetch professional images
+npm run fetch-images -- --category hero --query "business team" --count 1
+
+# 2. Optimize (same pipeline as client images)
+npm run image-optimize
+
+# 3. Update data file references
+# Example: src: '/images/hero/hero-1.webp'
+
+# 4. Verify performance maintained
+npm run verify:local
+```
+
+### **Development Workflow**
+```bash
+# Full verification (always run after changes)
+npm run verify:local
+
+# Individual commands (for debugging)
+npm run build
+npm run lint -- --fix
+npm test
+npx playwright test
+```
+
+### **Configuration Files Priority**
+1. `lib/site.config.local.ts` - Master configuration
+2. `lib/data/staticContent.ts` - All content
+3. `lib/theme.variants.ts` - Visual themes
+4. `scripts/unsplash-requests.json` - Batch image requests
+
+---
+
 ## 🤖 AI Assistant Autonomous Workflow
 
 **🎯 MISSION:** Transform this template codebase into a fully customized website for any client through autonomous AI-driven configuration and content integration.
@@ -566,6 +615,12 @@ After completing the 3-step workflow, proceed with systematic implementation:
    - **📁 Client images will be provided later in `docs/onboarding/client-input-files/images/`**
    - **⏳ Image optimization workflow (`npm run image-optimize`) will be executed only when real client images are available**
 
+   **🎨 OPTIONAL: Professional Unsplash Images for Enhanced Mockups:**
+   - **When appropriate:** Use Unsplash for professional stock images if client needs enhanced visuals
+   - **Proper workflow:** Always use `npm run fetch-images` → `npm run image-optimize` → update data references
+   - **Performance maintained:** All Unsplash images go through same optimization pipeline as client images
+   - **Attribution handled:** MCP server manages proper Unsplash attribution automatically
+
 #### **Phase B: Validation & Quality Assurance** ✅
 1. **Mandatory testing workflow:**
    ```bash
@@ -859,7 +914,140 @@ The GMG Template Website 2025 is a highly configurable, modern, and robust Next.
    - Organized by category (hero/, team/, services/, etc.)
    - Professional quality and brand-appropriate content
 
-**⚠️ Remember:** The website must function perfectly with placeholder images. Real images are an enhancement, not a requirement for the initial build.
+### 🖼️ **UNSPLASH INTEGRATION WORKFLOW (Professional Images)**
+
+**When to Use Unsplash:**
+- Client needs professional stock images to fill content gaps
+- Demonstrating template capabilities with high-quality visuals
+- Creating mockups before client's final images are ready
+- Replacing placeholder images with professional alternatives
+
+**✅ PROPER UNSPLASH WORKFLOW:**
+
+1. **Fetch Images Using Unsplash Integration:**
+   ```bash
+   # For specific categories and content
+   npm run fetch-images -- --category hero --query "professional business team" --count 2
+   
+   # Or use configuration file for batch requests
+   npm run fetch-images -- --config scripts/unsplash-requests.json
+   ```
+
+2. **Images Download to Raw Directory:**
+   - Unsplash images automatically download to `assets/images/raw/[category]/`
+   - High-resolution source images (optimal for optimization)
+   - Proper filenames with category prefixes (e.g., `hero-1.jpg`, `services-2.jpg`)
+
+3. **Run Image Optimization Pipeline:**
+   ```bash
+   npm run image-optimize
+   ```
+   - Converts images to WebP format
+   - Generates multiple responsive sizes
+   - Creates blur placeholder data
+   - Updates `public/images/blurDataURL.json`
+
+4. **Update Image References in Data Files:**
+   ```typescript
+   // In lib/data/homepage.ts or relevant data file
+   image: {
+     src: '/images/hero/mountain-landscape-hero.webp', // Updated path
+     alt: 'Professional alpine landscape representing business growth',
+   }
+   ```
+
+5. **Verify Performance Optimization:**
+   ```bash
+   npm run build  # Ensure no build errors
+   npm run verify:local  # Full verification including performance
+   ```
+
+**🎯 UNSPLASH MCP SERVER TOOLS FOR AI ASSISTANTS:**
+
+**✅ PRIMARY: Use MCP Tools (Recommended for AI Assistants):**
+The integrated MCP server provides these tools that AI assistants should use directly:
+
+- **`mcp_unsplash_search_photos`** - Search Unsplash for images by query, category, and orientation
+- **`mcp_unsplash_download_image`** - Download high-resolution images to correct raw directories  
+- **`mcp_unsplash_get_attribution`** - Get proper attribution information for images
+- **`mcp_unsplash_batch_download`** - Download multiple images in one operation
+
+**Example MCP Tool Usage:**
+```typescript
+// AI Assistant should call these tools directly:
+await mcp_unsplash_search_photos({
+  query: "professional business team collaboration",
+  category: "business", 
+  count: 1,
+  orientation: "landscape"
+});
+
+await mcp_unsplash_download_image({
+  imageId: "photo-id-from-search",
+  category: "hero",
+  filename: "hero-1.jpg"
+});
+```
+
+**⚡ FALLBACK: NPM Scripts (For Manual/Development Use):**
+If MCP tools are unavailable, use npm scripts:
+
+**📋 UNSPLASH CONFIGURATION EXAMPLE:**
+
+```json
+// scripts/unsplash-requests.json
+[
+  {
+    "category": "hero",
+    "query": "modern professional office collaboration",
+    "purpose": "homepage hero section",
+    "count": 1,
+    "orientation": "landscape"
+  },
+  {
+    "category": "about",
+    "query": "diverse business team working together",
+    "purpose": "about page team photo", 
+    "count": 1,
+    "orientation": "landscape"
+  },
+  {
+    "category": "services",
+    "query": "consulting strategy planning",
+    "purpose": "services illustrations",
+    "count": 3,
+    "orientation": "landscape"
+  }
+]
+```
+
+**🚨 CRITICAL SUCCESS PATTERNS:**
+
+✅ **Always Use Raw → Optimize → Reference Pattern:**
+1. Unsplash → `assets/images/raw/[category]/`
+2. `npm run image-optimize`
+3. Update data file references to `/images/[category]/filename.webp`
+
+✅ **Maintain Performance Standards:**
+- All Unsplash images go through same optimization pipeline
+- BlurDataURL generation happens automatically
+- Responsive sizes created for all viewports
+- WebP format with fallbacks
+
+❌ **Never Skip the Optimization Pipeline:**
+- Don't use Unsplash images directly from URLs
+- Don't bypass the image-optimize script
+- Don't manually place images in `public/images/`
+
+**⚡ INTEGRATION WITH EXISTING SYSTEMS:**
+
+- **OptimizedImage component:** Works seamlessly with Unsplash images after optimization
+- **BlurDataURL system:** Automatically generates blur placeholders for smooth loading
+- **Performance monitoring:** All Core Web Vitals maintained
+- **Attribution handling:** MCP server manages proper Unsplash attribution
+- **Testing pipeline:** All image workflows tested in E2E and unit tests
+
+**⚠️ Remember:** The website must function perfectly with placeholder images. Unsplash images are a professional enhancement, not a requirement for the initial build.
 
 ---
 
